modificamos en el index 02

--- a/index02.html
+++ b/index02.html
@@ -5,5 +5,11 @@
 </head>
 <body>
 	<h2>hoa munod - ejercicio 2 </h2>
+
+	<p>
+		hola amiguitos estamos trabajando bien chillin <br>
+		estamos creado un sistema <br>
+		asfsdfsdfsd
+	</p>
 </body>
 </html>
